--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "react-native"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.1.5",
@@ -36,6 +40,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-native": "^4.0.0",
+    "jest": "^27.4.7",
     "prettier": "2.5.1"
   },
   "private": true
