--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "eject": "expo eject",
     "test": "jest"
   },
-  "jest": {
-    "preset": "react-native"
-  },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.1.5",
     "@rainbow-me/animated-charts": "^1.0.0-alpha.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@types/react-test-renderer": "^17.0.1",
     "axios": "^0.24.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
@@ -32,7 +30,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "react-test-renderer": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
